--- a/MiraclePack/app/src/main/res/values/strings.xml
+++ b/MiraclePack/app/src/main/res/values/strings.xml
@@ -2,4 +2,14 @@
     <string name="app_name">MiraclePack</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="weekdays">
+        <item>Maandag</item>
+        <item>Dinsdag</item>
+        <item>Woensdag</item>
+        <item>Donderdag</item>
+        <item>Vrijdag</item>
+        <item>Zaterdag</item>
+        <item>Zondag</item>
+    </string-array>
 </resources>
