--- a/MiraclePack/app/src/main/res/values/strings.xml
+++ b/MiraclePack/app/src/main/res/values/strings.xml
@@ -2,4 +2,16 @@
     <string name="app_name">MiraclePack</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="nieuw_account_aanmaken">Nieuw account aanmaken?</string>
+    <string name="password">Password</string>
+    <string name="email">Email</string>
+    <string name="inloggen">Inloggen</string>
+    <string name="wachtwoord_vergeten">Wachtwoord vergeten?</string>
+    <string name="account_aanmaken">Account aanmaken</string>
+    <string name="herhaal_wachtwoord">Herhaal wachtwoord</string>
+    <string name="wachtwoord">Wachtwoord</string>
+    <string name="wachtwoord2">Wachtwoord</string>
+    <string name="verzenden">Verzenden</string>
+    <string name="test">Test</string>
+    <string name="wachtwoord1">Wachtwoord</string>
 </resources>
