--- a/MiraclePack/app/src/main/res/values/strings.xml
+++ b/MiraclePack/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="verzenden">Verzenden</string>
     <string name="test">Test</string>
     <string name="wachtwoord1">Wachtwoord</string>
+    <string name="uitloggen">Uitloggen</string>
 
 
     <string-array name="weekdays">
