--- a/MiraclePack/app/src/main/res/values/strings.xml
+++ b/MiraclePack/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
-    <string name="app_name">MiraclePack</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="app_name">Miracle-Pack</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="nieuw_account_aanmaken">Nieuw account aanmaken?</string>
