--- a/MiraclePack/app/src/main/res/values/strings.xml
+++ b/MiraclePack/app/src/main/res/values/strings.xml
@@ -15,6 +15,10 @@
     <string name="test">Test</string>
     <string name="wachtwoord1">Wachtwoord</string>
     <string name="uitloggen">Uitloggen</string>
+    <string name="wachtwoord_veranderen">wachtwoord veranderen</string>
+    <string name="select_picture">Select Picture</string>
+    <string name="textview">TextView</string>
+    <string name="telefoonnummer">Telefoonnummer</string>
 
 
     <string-array name="weekdays">
